--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "2.1.5",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "node scripts/deploy"
   },
   "browserslist": [
     ">0.2%",
